--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,34 @@
 body {
   margin: 0;
   padding: 0;
+  background: #3e3f4c;
+}
+.box {
+  font-size: 0.7rem;
+  border: 0.5px solid #000;
+  margin: 0.5rem;
+}
+.box-container {
+  width: 80%;
+  margin: 2rem auto;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+table {
+  border-collapse: collapse;
+}
+th,
+td,
+tr {
+  padding: 0.5em;
+  border: 0.5px solid #51525e;
+  color: #d1d1d1;
+  text-align: center;
+}
+tbody tr {
+  transition: 0.3s ease-in;
+}
+tbody tr:hover {
+  background: #51525e;
 }
